2008.06.14

* Removed extraneous while space.

2008.06.11

* Updated the commit script to work with bzr-svn.
* Added a path hack to commit.sh for running trial.
* Renamed adytum to txjsonrpc.
* Moved web and web2 up and renamed twisted to netstring.
* Removed .pyc files.
* Tweaked the commit script.
* Added license.
* Removed ez_setup.py.
* Updated TODO.
* Renamed the main package from adytum to txjsonrpc.
* Updated setup.py.
* Removed ez_setup support.
* Removed setuptools support.
* Changed to the new way of flushing logs in twisted.trial.
* Adjusted tests to use the new package and subpackage names.
* Adjusted examples to use the new package and subpackage names.
* Incremented the version number.
* Removed trial path hack from commit.sh.
* Test commit to svn and bzr from a freshly checked out branch.
* Cool! It worked. Removed testfile.
* Changed the commit script to point to 'main' on launchpad.
* One more change to the launchpad destination in the commit script.
* Updated the stat script to use bzr instead of svn.

2006.05.07

* Added a.t.jsonrpc.RPCFactory to __all__.
* Renamed some of the variables in the examples to be more accurate.

2006.05.06

* Added a beginning sketch of JSON over TCP in protocols.json.
* Some protocol tweaks.
* Added test top-level directory as well as an adytum.twisted-level test
directory.
* Converted a.t.w2.jsonrpc and the client portion of a.t.w.jsonrpc to use the
NetstringReceiver protocol for JSON-RPC over TCP.
* Removed protocol code, since we don't need a custom protocol for JSON-RCP
over TCP.
* Commented out the support for returning a dict with keys "result" and
"error" as it seems like unessary overhead for now. Someone convince me
otherwise, and I'll put it back in.
* Changed methodology for adding subhandlers.
* Fixed introspection.

2006.05.05

* Added directory place holders and __init__.py files.
* Added basic files.
* Copied jsonrpc.py from the adytum library.